--- a/Matters.css
+++ b/Matters.css
@@ -8,6 +8,16 @@
 
 .u-section-1 .u-text-1 {
   margin: 60px auto;
+}
+
+@media (max-width: 575px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 223px;
+  }
+
+  .u-section-1 .u-text-1 {
+    width: auto;
+  }
 }.u-section-2 {
   background-image: none;
 }
